--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,9 @@
 bcrypt==3.2.0
-Brotli==1.0.9
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
-click==8.0.3
-colorama==0.4.4
-dash==2.5.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-distlib==0.3.4
-dnspython==2.1.0
-filelock==3.7.1
+pymongo[srv]
+# filelock==3.7.1
 Flask==2.0.2
-Flask-Compress==1.12
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.3.1
-Flask-PyMongo==2.3.0
-idna==3.3
 itsdangerous==2.0.1
-Jinja2==3.0.3
-joblib==1.1.0
-MarkupSafe==2.0.1
-numpy==1.23.0
-panda==0.3.1
-pandas==1.4.3
-platformdirs==2.5.2
-plotly==5.8.2
-pycparser==2.21
-PyJWT==2.3.0
 pymongo==4.0.1
-python-dateutil==2.8.2
-pytz==2022.1
 requests==2.27.1
-scikit-learn==1.1.1
-scipy==1.8.1
-six==1.16.0
-tenacity==8.0.1
-threadpoolctl==3.1.0
-urllib3==1.26.9
-virtualenv==20.15.1
-Werkzeug==2.0.2
